--- a/wsd_part1/wsd_part1.tex
+++ b/wsd_part1/wsd_part1.tex
@@ -1012,7 +1012,7 @@ $Score(Chain) > Average(Scores) + 2 \times StandardDeviation(Scores)$
 \textit{S.~Abney and M.~Light.~}Hiding a semantic hierarchy in a markov model. In Proceedings of the Workshop on Unsupervised Learning in Natural Language Processing, ACL. 1999.
 
 \bibitem{Azzini}
-\textit{A.~Azzini, C.~da~Costa~Pereira, M.~Dragoni, and A.~G.~B.~Tettamanzi.~}Evolving Neural Networks for Word Sense Disambiguation // 8-th International conference on hybrid intelligent systems. Spain. Barcelona. pp. 332–337.
+\textit{A.~Azzini, C.~da~Costa~Pereira, M.~Dragoni, and A.~G.~B.~Tettamanzi.~}Evolving Neural Networks for Word Sense Disambiguation // 8-th International conference on hybrid intelligent systems. Spain. Barcelona. pp. 332–337. DOI: 10.1109/HIS.2008.88
 
 \bibitem{Barzilay Elhadad 1997}
 \textit{R.~Barzilay and M.~Elhadad.~}Using lexical chains for text summarization. In Proceedings of the ACL Workshop on Intelligent Scalable Text Summarization (Madrid, Spain). 1997. pp. 10–17.
@@ -1021,7 +1021,7 @@ $Score(Chain) > Average(Scores) + 2 \times StandardDeviation(Scores)$
 \textit{M.~Berry, T.~Do, G.~O’Brien, V.~Krishna, and S.~Varadhan.~}SVDPACK (version 1.0) user’s guide. Technical Report CS-93-194, University of Tennessee at Knoxville, Computer Science Department, April 1993.
 
 \bibitem{Bruce 1994}
-\textit{R.~Bruce and J.~Wiebe.~}Word-sense disambiguation using decomposable models. In Proceedings of the 32nd Annual Meeting of the Association for Computational Linguistics, 1994, pp. 139–146.
+\textit{R.~Bruce and J.~Wiebe.~}Word-sense disambiguation using decomposable models. In Proceedings of the 32nd Annual Meeting of the Association for Computational Linguistics, 1994, pp. 139–146. DOI: 10.3115/981732.981752
 
 \bibitem{Ciaramita 2000}
 \textit{M.~Ciaramita and M.~Johnson.~}Explaining away ambiguity: Learning verb selectional preference with Bayesian networks. 2000. 
@@ -1036,10 +1036,10 @@ $Score(Chain) > Average(Scores) + 2 \times StandardDeviation(Scores)$
 \textit{Charles~X.~Ling, M.~Marinov.~}Answering the connectionist challenge: A symbolic model of learning the past tenses of English verbs,  Cognition, Elsevier, 1993.
 
 \bibitem{Dekang 1998}
-\textit{D.~Lin.~}Automatic Retrieval and Clustering of Similar Words.Proceedings of the 17th international conference on Computational linguistics-Volume 2. – Association for Computational Linguistics, Department of Computer Science University of Manitoba Winnipeg, Manitoba, Canada, 1998, pp. 768-774.
+\textit{D.~Lin.~}Automatic Retrieval and Clustering of Similar Words.Proceedings of the 17th international conference on Computational linguistics-Volume 2. – Association for Computational Linguistics, Department of Computer Science University of Manitoba Winnipeg, Manitoba, Canada, 1998, pp. 768-774. DOI: 10.3115/980432.980696
 
 \bibitem{Dekang 1993}
-\textit{D.~Lin.~}Principle-based parsing without overgeneration. In Proceedings of ACL-93, Columbus, Ohio, 1993, pp. 112-120.
+\textit{D.~Lin.~}Principle-based parsing without overgeneration. In Proceedings of ACL-93, Columbus, Ohio, 1993, pp. 112-120. 
 
 \bibitem{Dekang 1997}
 \textit{D.~Lin.~}Using syntactic dependency as local context to resolve word sense ambiguity. In Proceedings of ACL/EACL-97, Madrid, Spain, July, 1997, pp. 64-71.
@@ -1060,7 +1060,7 @@ $Score(Chain) > Average(Scores) + 2 \times StandardDeviation(Scores)$
 \textit{Y.~Freund, R.~E.~Schapire.~}Game theory, on-line prediction and boosting. In Proceedings of the Ninth Annual Conference on Computational Learning Theory,  1996. pp. 325-332.
 
 \bibitem{Freund 1997}
-\textit{Y.~Freund, R.~E.~Schapire.~}A decision-theoretic generalization of on-line learning and an application to boosting. Journal of Computer and System Sciences. 1997. pp. 119–139.
+\textit{Y.~Freund, R.~E.~Schapire.~}A decision-theoretic generalization of on-line learning and an application to boosting. Journal of Computer and System Sciences. 1997. pp. 119–139. DOI: 10.1006/jcss.1997.1504
 
 \bibitem{Halliday Hasan 1976}
 \textit{M.~Halliday, and R.~Hasan.~}Cohesion in English. London: Longman. 1976. 
