--- a/wsd_part1/wsd_part1.tex
+++ b/wsd_part1/wsd_part1.tex
@@ -1039,10 +1039,10 @@ $Score(Chain) > Average(Scores) + 2 \times StandardDeviation(Scores)$
 \textit{D.~Lin.~}Automatic Retrieval and Clustering of Similar Words.Proceedings of the 17th international conference on Computational linguistics-Volume 2. – Association for Computational Linguistics, Department of Computer Science University of Manitoba Winnipeg, Manitoba, Canada, 1998, pp. 768-774. DOI: 10.3115/980432.980696
 
 \bibitem{Dekang 1993}
-\textit{D.~Lin.~}Principle-based parsing without overgeneration. In Proceedings of ACL-93, Columbus, Ohio, 1993, pp. 112-120. 
+\textit{D.~Lin.~}Principle-based parsing without overgeneration. In Proceedings of ACL-93, Columbus, Ohio, 1993, pp. 112-120. DOI: 10.3115/981574.981590
 
 \bibitem{Dekang 1997}
-\textit{D.~Lin.~}Using syntactic dependency as local context to resolve word sense ambiguity. In Proceedings of ACL/EACL-97, Madrid, Spain, July, 1997, pp. 64-71.
+\textit{D.~Lin.~}Using syntactic dependency as local context to resolve word sense ambiguity. In Proceedings of ACL/EACL-97, Madrid, Spain, July, 1997, pp. 64-71. DOI: 10.3115/979617.979626
 
 \bibitem{Donald 1990}
 \textit{D.~Hindle.~}Noun classification from predicate-argument structures. In Proceedings of ACL-90, Pittsburg, Pennsylvania, June, 1990, pp. 268-275.
@@ -1069,7 +1069,7 @@ $Score(Chain) > Average(Scores) + 2 \times StandardDeviation(Scores)$
 \textit{Z.~Harris.~}Distributional structure. In: Katz, J. J. (ed.) The Philosophy of Linguistics. New York: Oxford University Press. 1985. pp. 26–47
 
 \bibitem{Hearst 1994}
-\textit{M.~Hearst.~}Multi-paragraph segmentation of expository text. In Proceedings of the 32th Annual Meeting of the Association for Computational Linguistics, 9–16. Las Cruces, New Mexico: Association for Computational Linguistics. 1994. 
+\textit{M.~Hearst.~}Multi-paragraph segmentation of expository text. In Proceedings of the 32th Annual Meeting of the Association for Computational Linguistics, 9–16. Las Cruces, New Mexico: Association for Computational Linguistics. 1994. DOI: 10.3115/981732.981734
 
 \bibitem{Hinton 1986}
 \textit{G.~E.~Hinton, J.~L.~McClelland, D.~E.~Rumelhart.~}Distributed representations// In Parallel Processing: explorations in the microstructure of cognition. MIT Press, Cambridge, MA, 1986. pp. 5–44.
@@ -1084,16 +1084,16 @@ $Score(Chain) > Average(Scores) + 2 \times StandardDeviation(Scores)$
 \textit{A.~Jain and R.~Dubes.~}Algorithms for Clustering Data. Prentice-Hall, Inc., Upper Saddle River, NJ, 1988.
 
 \bibitem{Jain 1999}
-\textit{A.~Jain, M.~Murthy, and P.~Flynn}Data clustering: a review. ACM Computing Surveys, 31(3):264-323, September 1999.
+\textit{A.~Jain, M.~Murthy, and P.~Flynn}Data clustering: a review. ACM Computing Surveys, 31(3):264-323, September 1999. DOI: 10.1145/331499.331504
 
 \bibitem{Leacock 1993}
 \textit{C.~Leacock, G.~Towell, and E.~Voorhees.~}Corpus-based statistical sense resolution. In Proceedings of the ARPA Workshop on Human Language Technology, March. 1993, pp. 260–265.  
 
 \bibitem{LESK 1986}
-\textit{M.~Lesk.~}Automatic sense disambiguation using machine readable dictionaries: How to tell a pine cone from an ice cream cone --  Proceedings  of  the 5th SIGDOC. New York. 1986. pp. 24–26. 
+\textit{M.~Lesk.~}Automatic sense disambiguation using machine readable dictionaries: How to tell a pine cone from an ice cream cone --  Proceedings  of  the 5th SIGDOC. New York. 1986. pp. 24–26. DOI: 10.1145/318723.318728
 
 \bibitem{Lin 2001}
-\textit{D.~Lin and P.~Pantel.~}Induction of semantic classes from natural language text. In Proceedings of SIGKDD-01. San Francisco, CA. 2001. pp. 317–322.   
+\textit{D.~Lin and P.~Pantel.~}Induction of semantic classes from natural language text. In Proceedings of SIGKDD-01. San Francisco, CA. 2001. pp. 317–322. DOI: 10.1145/502512.502558  
 
 \bibitem{Manning 1999}
 \textit{C.~D.~Manning and H.~Sch\"utze.~}Foundations of Statistical Natural Language Processing. MIT Press. 1999.
@@ -1115,10 +1115,10 @@ An Illustration of the Role of Bias in Machine Learning, Department of Computer 
 \textit{J.~Morris, and G.~Hirst}Lexical cohesion computed by thesaural relations as an indicator of the structure of text. Computational Linguistics 17(1):21–43. 1991. 
 
 \bibitem{Navigli 2009}
-\textit{R.~Navigli.~}Word sense disambiguation: A survey. ACM Computing Surveys (CSUR) 41, no. 2 (2009): 10.
+\textit{R.~Navigli.~}Word sense disambiguation: A survey. ACM Computing Surveys (CSUR) 41, no. 2 (2009): 10. DOI: 10.1145/1459352.1459355
 
 \bibitem{Pantel 2002}
-\textit{P.~Pantel, D.~Lin.~}Discovering Word Senses from Text. University of Alberta. Department of Computing Science Edmonton, Alberta T6H 2E1 Canada, 2002.
+\textit{P.~Pantel, D.~Lin.~}Discovering Word Senses from Text. University of Alberta. Department of Computing Science Edmonton, Alberta T6H 2E1 Canada, 2002. DOI: 10.1145/775047.775138
 
 \bibitem{Pedersen 2000}
 \textit{T.~Pedersen.~}A Simple Approach to Building Ensembles of Naive Bayesian Classi?ers for Word Sense Disambiguation// Department of Computer Science, University of Minnesota Duluth.–2000.
@@ -1144,7 +1144,7 @@ An Illustration of the Role of Bias in Machine Learning, Department of Computer 
 \bibitem{Schapire 1997}
 \textit{R.~E.~Schapire.~}Using output codes to boost multiclass learning problems. InMachin Learning: Proceedings of the Fourteenth International Conference, 1997. pp. 313–321. 
 \bibitem{VERONIS 1990}
-\textit{J.~Veronis and N.~Ide.~}Word  sense  disambiguation  with  very  large neural  networks  extracted  from machine readable dictionaries – Proceedings of the 13th International Conference on Computational Linguistics. Helsinki. 1990. pp. 389–394.
+\textit{J.~Veronis and N.~Ide.~}Word  sense  disambiguation  with  very  large neural  networks  extracted  from machine readable dictionaries – Proceedings of the 13th International Conference on Computational Linguistics. Helsinki. 1990. pp. 389–394. DOI: 10.3115/997939.998006
 
 \bibitem{SC:website}
 \textit{SenseClusters. } http://senseclusters.sourceforge.net
@@ -1156,13 +1156,13 @@ An Illustration of the Role of Bias in Machine Learning, Department of Computer 
 \textit{UMLS Terminology Services (UTS).} http://umlsks.nlm.nih.gov/kss/servlet/Turbine/template
 
 \bibitem{WALTZ 1985}
-\textit{D.~L.~Waltz and J. B.~Pollack.~}Massively parallel parsing: a strongly interactive  model  of  natural  language interpretation – Cognitive science. 1985. № 9. pp. 51–74.
-
+\textit{D.~L.~Waltz and J. B.~Pollack.~}Massively parallel parsing: a strongly interactive  model  of  natural  language interpretation – Cognitive science. 1985. № 9. pp. 51–74. DOI: 10.1207/s15516709cog0901\_4
+                     
 \bibitem{Weeber 2001}
 \textit{M.~Weeber, J.~Mork, A.~Aronson.~}Developing a test collection for biomedical word sense disambiguation. Proc. AMIA., 2001.
 
 \bibitem{Zhao 2002}
-\textit{Y.~Zhao and G.~Karypis.~}Evaluation of hierarchical clustering algorithms for document datasets. In Proceedings of the 11th International Conference on Information and Knowledge Management, McLean, VA, 2002. pp. 515-524.
+\textit{Y.~Zhao and G.~Karypis.~}Evaluation of hierarchical clustering algorithms for document datasets. In Proceedings of the 11th International Conference on Information and Knowledge Management, McLean, VA, 2002. pp. 515-524. DOI: 10.1145/584792.584877
 
 
 
